tests/miniJava/neg/004349_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public java java ( ) { return 0 ; } }
